@@ -97,3 +97,8 @@ div.ctools-modal-content .resizable-textarea {
   margin-right: 5em;
 }
 
+div.ctools-modal-content .container-inline .form-item {
+  margin-right: 2em;
+}
+
+
