@@ -27,6 +27,8 @@ Add a couple of support functions for ctools_set_page_token that are meant to be
 #531522 by alex_b: Introduce ctools_static() modelled after static object handling in D7.
 #541428 by viz8: User name as a context argument.
 #592692 by johnskulski: use theme_links instead of theme('links') for dropdown because we do not actually want a theme to change this output.
+#547686: Allow view panes to better respect the default pager settings.
+#424548: Add a warning about overridng pager settings with Views AJAX.
 
 ctools 6.x-1.0
 ==============
